# Medical-Assistant-Bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
client/: app.py  config.py  requirements.txt
client/components/: chatUI.py  upload.py
client/utils/: api.py
server/: logger.py  main.py  requirements.txt
server/middlewares/: exception_handlers.py
server/modules/: llm.py  load_vectorstore.py  pdf_handlers.py
server/routes/: ask_question.py  upload_pdfs.py
