[project]
name = "medical-assistant-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.129.0",
    "google-genai>=1.63.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-pinecone>=0.0.1",
    "loguru>=0.7.3",
    "pinecone>=8.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
members = [
    "client",
]

[tool.setuptools]
package-dir = {"" = "server"}
